--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,48 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+/*!
 
-// Variables
-@import 'variables';
+ =========================================================
+ * Now UI Kit - v1.3.0
+ =========================================================
 
+ * Product Page: https://www.creative-tim.com/product/now-ui-kit
+ * Copyright 2019 Creative Tim (http://www.creative-tim.com)
+
+ * Designed by www.invisionapp.com Coded by www.creative-tim.com
+
+ =========================================================
+
+ * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+ */
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-@import "components/navbar";
-@import "components/upload-image-section";
+@import 'now-ui-kit/variables';
+@import 'now-ui-kit/mixins';
+
+// Core CSS
+@import "now-ui-kit/buttons";
+@import "now-ui-kit/inputs";
+@import "now-ui-kit/progress";
+@import "now-ui-kit/badges";
+@import "now-ui-kit/typography";
+@import "now-ui-kit/misc";
+@import "now-ui-kit/pills";
+
+// components
+@import "now-ui-kit/nucleo-outline";
+
+@import "now-ui-kit/tabs";
+@import "now-ui-kit/navbar";
+@import "now-ui-kit/alerts";
+@import "now-ui-kit/images";
+@import "now-ui-kit/popups";
+
+// Cards
+@import "now-ui-kit/cards";
+@import "now-ui-kit/cards/card-plain";
+
+@import "now-ui-kit/responsive";
+
+// Custom components
+@import "components/card";
